@@ -1,6 +1,7 @@
 == Changelog ==
 = 1.0.0 - 2022-10-20 =
 
+* 2023-04-23 : fix bug qrcode can't update payment status
 * 2022-10-20 : fix bug qrcode not show on firefox
 * 2022-07-10 : custom payment status after payment is completed
 * 2022-07-08 : fix bug callback not invalid parameter
